# quasar

./: .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .readthedocs.yml  .travis.yml  CLAUDE.md  CMakeLists.txt  OptionalModule.cmake  ProjectSettings.cmake  README.arrays.txt  README.arrays3_ua.txt  README.md  TODO.txt  appveyor.yml  git_push_quasar_arrays4.sh  open62541_config.cmake  open62541_win_config.cmake  open6_win_configuration.cmake  python_requirements.txt  quasar.py  quasarGUI.py  requirements.txt  slc6_atlas_toolkit14.cmake  slc6_atlas_toolkit15_eval.cmake  tmp_msg.txt  travis.yml  uaexpert.qhc  unified_automation_config.cmake
AddressSpace/: CMakeLists.txt  designToAddressSpaceDocHtml.xslt  designToClassBody.xslt  designToClassHeader.xslt  designToGeneratedCmakeAddressSpace.xslt  designToInformationModelBody.xslt  designToInformationModelHeader.xslt  designToSourceVariablesBody.xslt  designToSourceVariablesHeader.xslt
AddressSpace/include/: ASCommon.h  ASDelegatingMethod.h  ASDelegatingVariable.h  ASNodeManager.h  ASNodeQueries.h  ASSourceVariable.h  ASSourceVariableIoManager.h  ArrayTools.h  ChangeNotifyingVariable.h  FreeVariablesEngine.h
AddressSpace/src/: ASNodeManager.cpp  ASSourceVariableIoManager.cpp  ArrayTools.cpp  ChangeNotifyingVariable.cpp  FreeVariablesEngine.cpp
AddressSpace/templates/: designToAddressSpaceDocHtml.jinja  designToAddressSpaceDocMd.jinja  designToClassBody.jinja  designToClassHeader.jinja  designToGeneratedCmakeAddressSpace.jinja  designToInformationModelBody.jinja  designToInformationModelHeader.jinja  designToSourceVariablesBody.jinja  designToSourceVariablesHeader.jinja
CalculatedVariables/: CMakeLists.txt
CalculatedVariables/doc/: CalculatedVariables.html  SynchronizationExample.odg
CalculatedVariables/ext_components/: amalgamate_header.json  clone_and_amalgamate_muparser.sh  clone_muparser.sh
CalculatedVariables/ext_components/muparser-amalgamated/include/: muParser.h
CalculatedVariables/include/: CalculatedVariable.h  CalculatedVariablesChangeListener.h  CalculatedVariablesEngine.h  CalculatedVariablesLogComponentId.h  CalculatedVariablesSynchronizer.h  ParserVariable.h  ParserVariableRequestUserData.h
CalculatedVariables/src/: CalculatedVariable.cpp  CalculatedVariablesChangeListener.cpp  CalculatedVariablesEngine.cpp  ParserVariable.cpp
Common/: CMakeLists.txt  CommonCustom.cmake
Common/include/: ASUtils.h  QuasarThreadPool.h  Utils.h
Common/src/: ASUtils.cpp  QuasarThreadPool.cpp
Common/templates/: headers.jinja
Common/test/: test_quasar_threadpool.cpp
Configuration/: CMakeLists.txt  ConfigurationData.xsd  ConfigurationDataReader.cpp  ConfigurationDataReader.h  Configurator.h  designToConfigDocumentationHtml.xslt  designToConfigValidator.xslt  designToConfigurationXSD.xslt  designToConfigurator.xslt
Configuration/include/: ConfigurationDecorationUtils.h
Configuration/templates/: designToConfigDocumentationDox.jinja  designToConfigDocumentationHtml.jinja  designToConfigDocumentationMd.jinja  designToConfigValidator.jinja  designToConfigurationXSD.jinja  designToConfigurator.jinja
Device/: CMakeLists.txt  DeviceCustom.cmake  designToDeviceBaseBody.xslt  designToDeviceBaseHeader.xslt  designToDeviceBody.xslt  designToDeviceHeader.xslt  designToGeneratedCmakeDevice.xslt  designToRootBody.xslt  designToRootHeader.xslt
Device/templates/: commonDeviceTemplates.jinja  designToDeviceBaseBody.jinja  designToDeviceBaseHeader.jinja  designToDeviceBody.jinja  designToDeviceHeader.jinja  designToGeneratedCmakeDevice.jinja  designToGeneratedCmakeDeviceBase.jinja  designToRootBody.jinja  designToRootHeader.jinja
LogIt/: CMakeLists.txt
LogIt/docs/: index.markdown
LogIt/include/: BoostRotatingFileLog.h  ComponentAttributes.h  LogIt.h  LogItInstance.h  LogItInternalUtils.h  LogItStaticDefinitions.h  LogLevels.h  LogRecord.h  LogSinkInterface.h  LogSinks.h  StdOutLog.h  UaTraceSink.h
LogIt/src/: BoostRotatingFileLog.cpp  ComponentAttributes.cpp  LogIt.cpp  LogItInstance.cpp  LogItInternalUtils.cpp  LogLevels.cpp  LogRecord.cpp  LogSinks.cpp  StdOutLog.cpp  UaTraceSink.cpp
Meta/: CMakeLists.txt  amalgamate.cmake  meta_build_info.py
Meta/config/: Meta.xsd
Meta/design/: meta-design.xml
Meta/include/: ASBuildInformation.h  ASComponentLogLevel.h  ASComponentLogLevels.h  ASGeneralLogLevel.h  ASLog.h  ASQuasar.h  ASServer.h  ASSourceVariableThreadPool.h  ASStandardMetaData.h  Base_DBuildInformation.h  Base_DComponentLogLevel.h  Base_DGeneralLogLevel.h  Base_DQuasar.h  Base_DServer.h  Base_DSourceVariableThreadPool.h  Base_DStandardMetaData.h  Certificate.h  DBuildInformation.h  DComponentLogLevel.h  DGeneralLogLevel.h  DLogLevel.h  DQuasar.h  DServer.h  DSourceVariableThreadPool.h  DStandardMetaData.h  MetaBuildInfo.h  MetaUtils.h  meta.h  metaBackwardsCompatibilityUtils.h
Meta/src/: ASBuildInformation.cpp  ASComponentLogLevel.cpp  ASComponentLogLevels.cpp  ASGeneralLogLevel.cpp  ASLog.cpp  ASQuasar.cpp  ASServer.cpp  ASSourceVariableThreadPool.cpp  ASStandardMetaData.cpp  Base_DBuildInformation.cpp  Base_DComponentLogLevel.cpp  Base_DGeneralLogLevel.cpp  Base_DQuasar.cpp  Base_DServer.cpp  Base_DSourceVariableThreadPool.cpp  Base_DStandardMetaData.cpp  Certificate.cpp  DBuildInformation.cpp  DComponentLogLevel.cpp  DGeneralLogLevel.cpp  DLogLevel.cpp  DQuasar.cpp  DServer.cpp  DSourceVariableThreadPool.cpp  DStandardMetaData.cpp  MetaBuildInfo.cpp  MetaUtils.cpp  meta.cpp  metaBackwardsCompatibilityUtils.cpp
Server/: CMakeLists.txt  ServerCustom.cmake
Server/include/: BaseQuasarServer.h  OpcuaToolkitInfo.hpp.in  QUASARFrameworkVersion.h  QuasarServer.h  QuasarServerCallback.h  QuasarUaTraceHook.hpp  QuasarVersion.h  opcserver.h  opcserver_open62541.h  serverconfigxml_quasar.h  shutdown.h  version.h
Server/src/: BaseQuasarServer-open62541.cpp  BaseQuasarServer-uatoolkit.cpp  BaseQuasarServer.cpp  QuasarServer.cpp  QuasarServerCallback.cpp  QuasarUaTraceHook.cpp  main.cpp  opcserver.cpp  opcserver_open62541.cpp  serverconfigxml.cpp  shutdown.cpp
Server/xsd/: ServerConfig.xsd
(+217 files in other folders)
